@@ -20,6 +20,7 @@ version 1.12:
 
 	Fixes:
 	- binmode for POTcompact
+	- confusion between option name 'lexicon' or 'lexicons', accept both.
 
 version 1.11: Thu Mar 22 23:32:11 CET 2018
 
